--- a/block-BHaaci/index.html
+++ b/block-BHaaci/index.html
@@ -29,7 +29,7 @@
                 </article>
                 <div class="flex-50">
                     <button class="form-control btn" >
-                        <a href="#"><span>Try it free 7 days</span> then $20/mo. thereafter</a>
+                        <span>Try it free 7 days</span> then $20/mo. thereafter
                     </button>
                     <form class="form align-start ">
                         
